@@ -4,6 +4,7 @@ complete changelog, see https://github.com/JolleJolles/animlab/commits/
 
 2019-06-14 - version 1.4.1
     * Added sample script for drawing
+    * Updated drawing functions to make them more generic
 
 2019-06-14 - version 1.4.0
     * Incorporated mouse events class and drawing functions for crosshair
